service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-svc
spec:
  selector:
    app: podinfo
  ports:
    - port: 80
      protocol: TCP
